Added HTML and CSS

--- a/index.html
+++ b/index.html
@@ -1,4 +1,32 @@
 <!DOCTYPE html>
 <html>
-    <h1>Hello World!</h1>
+    <head>
+        <link rel="stylesheet" href="resources/CSS/style.css">
+        <title>
+            Excursion - Discover Hidden Places
+        </title>
+    </head>
+
+    <body>
+        <header>
+            <h1>Discover hidden places in the world around you</h1>
+            <p><a class="link" href="index.html">Download Excursion (Coming soon!)</a></p>
+        </header>
+        <section>
+            <p><video autoplay muted loop>
+                <source src="resources/media/videos/excursion.mp4" type="video/mp4">
+            Your browser does not support the video.
+            </video></p>
+
+            <h2>Your personal travel guide</h2>
+            <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+            <p><img class="image" src="resources/media/pictures/camp.jpeg" alt="Image of a camp at night in the wild"></p>
+            <p><img class="image" src="resources/media/pictures/phone.png" alt="Pictogram of a phone"></p>
+            <h2>Coming soon for iPhone and Android</h2>
+            <p><a class="link" href="index.html">Download Excursion (Coming soon!)</a></p>
+        </section>
+        <footer>
+            <p>© Excursion</p>
+        </footer>
+    </body>
 </html>
